--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
-  "name": "${PROJECT_NAME}",
+  "name": "would-you-rather-api",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "../COMBINE_WYR_VUE_WYR_EXPRESS_API_SERVER/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "private": true
+  "private": true,
+  "author": "Kamal",
+  "license": "ISC",
+  "description": "",
+  "dependencies": {
+    "express": "^5.1.0"
+  }
 }
